2009-10-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Fixed
	  'Bug 549864 - Intellisense does not work properly with
	  expressions'.

2009-10-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Fixed
	  faling unit test.

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Respect the parameter insight option.

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CodeGenerator.cs: Fixed "Bug
	  549130 - "resolve" adds using st. at wrong place when
	  namespace and classname conflict".

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
	  Fixed 'Bug 548941 - Generated event handler doesn't account
	  for missing using statements'.

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
	  implemented 'Bug 548711 - generated event handlers names
	  should always contain "Handle"'.

2009-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpNRefactoryASTProvider.cs:
	  handled in extract method.

2009-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpNRefactoryASTProvider.cs:
	  Fixed 'Bug 548367 - Extract method adds an unwanted newline
	  at the end'.

2009-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CodeGenerator.cs: Overworked
	  new member positioning code.

2009-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpNRefactoryASTProvider.cs:
	  Fix 'Bug 545270 - Move type to another file - part 1'.

2009-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	  Fixed 'Bug 547949 - Rename partial classes does not rename